# gitripper

./: .gitignore  Cargo.toml  README.md  build.rs  gitripper.py  rustfmt.toml  test_gitripper.py
.cargo/: config.toml
assets/: DEFAULT_README.md
benches/: url_parsing.rs  zip_extraction.rs
src/: default_branch_getter.py  error_codes.py  git_utils.py  github_api.py  github_url_parser.py  gitripper.py  lib.rs  main.py  main.rs  repo_initializer.py  zip_utils.py
test/: test_gitripper.py
tests/: integration_tests.rs
