[package]
name = "gitripper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json", "gzip"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tempfile = "3.23.0"
zip = { version = "7.1.0", optional = true, default-features = false, features = ["deflate"] }
once_cell = "1.18.0"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.7"
git2 = "0.20.3"
memmap2 = "0.9.9"
ignore = "0.4.25"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release.build-override]
opt-level = 0
codegen-units = 16

[features]
zip = ["dep:zip"]
default = ["zip"]
